--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,11 +1,11 @@
 name: citra-build
 
 on:
-  push:
-    branches: [ "*" ]
-    tags: [ "*" ]
-  pull_request:
-    branches: [ master ]
+#  push:
+#    branches: [ "*" ]
+#    tags: [ "*" ]
+#  pull_request:
+#    branches: [ master ]
 
 jobs:
   source:
