remove auto scripts

--- a/.github/workflows/license-header.yml
+++ b/.github/workflows/license-header.yml
@@ -1,8 +1,8 @@
 name: citra-license
 
 on:
-  pull_request:
-    branches: [ master ]
+#  pull_request:
+#    branches: [ master ]
 
 jobs:
   license-header:
