--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -1,10 +1,10 @@
 name: citra-format
 
 on:
-  push:
-    branches: [ "*" ]
-  pull_request:
-    branches: [ master ]
+#  push:
+#    branches: [ "*" ]
+#  pull_request:
+#    branches: [ master ]
 
 jobs:
   clang-format:
